--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -2,7 +2,7 @@ Flask==2.0.0
 Flask-SQLAlchemy==2.1
 Flask-Script==2.0.6
 Jinja2==3.0.0
-MarkupSafe==0.23
+MarkupSafe==2.0.0rc2
 SQLAlchemy==1.4.15
 Werkzeug==2.0.0
 gunicorn==20.1.0
